--- a/hw04.ipynb
+++ b/hw04.ipynb
@@ -2,6 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "6a8885a6-b782-40b7-9f2e-90666bf6d825",
       "metadata": {},
       "source": [
         "# BEE 4750 Homework 4: Linear Programming and Capacity Expansion\n",
@@ -31,24 +32,24 @@
         "The following code loads the environment and makes sure all needed\n",
         "packages are installed. This should be at the start of most Julia\n",
         "scripts."
-      ],
-      "id": "1f9ca328-7409-4f06-9989-57f5289c50e0"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
+      "id": "2",
       "metadata": {},
       "outputs": [],
       "source": [
         "import Pkg\n",
         "Pkg.activate(@__DIR__)\n",
         "Pkg.instantiate()"
-      ],
-      "id": "2"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
+      "id": "4",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,11 +60,11 @@
         "using Measures\n",
         "using CSV\n",
         "using MarkdownTables"
-      ],
-      "id": "4"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "fe74cf85-7353-46d8-b7b8-6d6c686489b5",
       "metadata": {},
       "source": [
         "## Problems (Total: 50/60 Points)\n",
@@ -127,12 +128,73 @@
         "For this problem, we will use hourly load (demand) data from 2013 in New\n",
         "York’s Zone C (which includes Ithaca). The load data is loaded and\n",
         "plotted below in <a href=\"#fig-demand\" class=\"quarto-xref\">Figure 1</a>."
-      ],
-      "id": "95301b87-804f-412b-8301-2b17c375bdb9"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "76295602",
+      "metadata": {},
+      "source": [
+        "The number of each crop produced is determined by the application rate and the amount of land (ha)\n",
+        "\n",
+        "Assuming the crop yield has a linear relationship with application rate rate from 0 to 1 kg/ha we get\n",
+        "\n",
+        "Soybean_yield = 900x + 2900 Eq. 1\n",
+        "Wheat_yield = 600y + 3500 Eq. 2\n",
+        "corn_yield = 800z + 5900 Eq. 3\n",
+        "\n",
+        "where x,y, and z are the application rates\n",
+        "\n",
+        "The total amount per crop produced per year is thus:\n",
+        "\n",
+        "soybean_kg = soybean_yield (kg/ha)*soybean_land (ha) Eq. 4\n",
+        "wheat_kg = wheat_yield (kg/ha)*wheat_land (ha) Eq. 5\n",
+        "corn_kg = corn_yield (kg/ha)*corn_land (ha) Eq. 6\n",
+        "\n",
+        "After we get the amounts, we can then determine our profit function which we get from substracting costs from revenues\n",
+        "\n",
+        "Revenues:\n",
+        "\n",
+        "soybean_revenue = soybean_kg (kg) * .36 ($/kg) Eq. 7\n",
+        "wheat_revenue = wheat_kg (kg) * .27 ($/kg) Eq. 8\n",
+        "corn_revenue = corn_kg (kg) * .22 ($/kg) Eq. 9\n",
+        "\n",
+        "Total Revenue = soybean_revenue + wheat_revenue + corn_revenue\n",
+        "\n",
+        "Costs: \n",
+        "\n",
+        "soybean_costs = 350 ($/ha) * soybean_land (ha) + 70($/ha) *soybean_land (ha) Eq. 10\n",
+        "wheat_costs = 280 ($/ha) * wheat_land (ha) + 70($/ha) *wheat_land (ha) Eq. 11\n",
+        "corn_costs = 390 ($/ha) * corn_land (ha) + 70($/ha) *corn_land (ha) Eq. 12\n",
+        "\n",
+        "Total Costs = soybean_costs + wheat_costs + corn_costs Eq. 13\n",
+        "\n",
+        "Profit is thus:\n",
+        "\n",
+        "Total Profit = Total Revenue - Total Costs Eq. 14\n",
+        "\n",
+        "Our objective function is Max(Total Profit)\n",
+        "\n",
+        "Our constraints are the application rates for each crop:\n",
+        "\n",
+        "(Soybean_kg/soybean_land -2900)/900 < .8\n",
+        "(Wheat_kg/wheat_land -3500)/600 < .7\n",
+        "(Corn_kg/corn_land -5900)/800 < .6\n",
+        "\n",
+        "Our Decision Variables are soybean_kg, wheat_kg and corn_kg (kg)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
+      "id": "cell-fig-demand",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -145,11 +207,11 @@
         "\n",
         "# plot demand\n",
         "plot(demand.Hour, demand.Demand, xlabel=\"Hour of Year\", ylabel=\"Demand (MWh)\", label=:false)"
-      ],
-      "id": "cell-fig-demand"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "89971718-a0c1-46c7-8c9e-7bf7805e27c4",
       "metadata": {},
       "source": [
         "Next, we load the generator data, shown in\n",
@@ -157,21 +219,21 @@
         "includes fixed costs (\\$/MW installed), variable costs (\\$/MWh\n",
         "generated), and CO<sub>2</sub> emissions intensity (tCO<sub>2</sub>/MWh\n",
         "generated)."
-      ],
-      "id": "093068c3-31fc-4cff-8844-acf115d23ef2"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
+      "id": "38f5dc80-c225-4aa1-8a30-2b82d3bd85ff",
       "metadata": {},
       "outputs": [],
       "source": [
         "gens = DataFrame(CSV.File(\"data/generators.csv\"))"
-      ],
-      "id": "2be2db0e-b9d6-4c46-b0cd-72a7b94257d3"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "9aa06bd0-013f-45ae-9ed1-66a6bcc71178",
       "metadata": {},
       "source": [
         "Finally, we load the hourly solar and wind capacity factors, which are\n",
@@ -179,12 +241,12 @@
         "tell us the fraction of installed capacity which is expected to be\n",
         "available in a given hour for generation (typically based on the average\n",
         "meteorology)."
-      ],
-      "id": "3393bcbd-c9db-49c8-8df2-4fbd18e2ef7a"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
+      "id": "3fdd58e7-8eb3-4ee4-856d-69066a113e74",
       "metadata": {
         "layout-nrow": 2
       },
@@ -206,11 +268,11 @@
         "\n",
         "display(p1)\n",
         "display(p2)"
-      ],
-      "id": "402cb6be-4e9b-47ff-94d8-7bcf34db5e1f"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "9dc62144-5276-443a-b90f-87be57b3aec6",
       "metadata": {},
       "source": [
         "You have been asked to develop a generating capacity expansion plan for\n",
@@ -223,7 +285,7 @@
         "capacity, geothermal plants operate at maximum 85% capacity, and solar\n",
         "and wind available capacities vary by the hour depend on the expected\n",
         "meteorology. The utility will also penalize any non-served demand at a\n",
-        "rate of \\$10,000/MWh.\n",
+        "rate of \\$5,000/MWh.\n",
         "\n",
         "**In this problem**:\n",
         "\n",
@@ -246,9 +308,7 @@
         "> **Significant Digits**\n",
         ">\n",
         "> Use `round(x; digits=n)` to report values to the appropriate\n",
-        "> precision! If your number is on a different order of magnitude and you\n",
-        "> want to round to a certain number of significant digits, you can use\n",
-        "> `round(x; sigdigits=n)`.\n",
+        "> precision!\n",
         "\n",
         "> **Getting Variable Output Values**\n",
         ">\n",
@@ -285,35 +345,35 @@
         "    Do these changes make sense?\n",
         "-   What would the value to the utility be of allowing it to emit an\n",
         "    additional 1000 tCO<sub>2</sub>/yr? An additional 5000?"
-      ],
-      "id": "937504b4-b01f-4e1c-893a-39af537a2b63"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "442630eb-7aa9-44fe-a76c-a5b8f0622f86",
       "metadata": {},
       "source": [
         "## References\n",
         "\n",
         "List any external references consulted, including classmates."
-      ],
-      "id": "4f454cd1-66ed-4951-bc25-4b6798ad49bc"
+      ]
     }
   ],
-  "nbformat": 4,
-  "nbformat_minor": 5,
   "metadata": {
     "kernel_info": {
       "name": "julia"
     },
     "kernelspec": {
-      "name": "julia",
-      "display_name": "Julia",
-      "language": "julia"
+      "display_name": "Julia 1.10.4",
+      "language": "julia",
+      "name": "julia-1.10"
     },
     "language_info": {
+      "file_extension": ".jl",
+      "mimetype": "application/julia",
       "name": "julia",
-      "codemirror_mode": "julia",
       "version": "1.10.4"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
